--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.28.1",
     "consola": "^2.15.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
+    "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.6"
+    "mongoose": "^6.2.6",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
