--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
+    "multer": "^1.4.4",
     "validator": "^13.7.0"
   },
   "devDependencies": {
