--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.26.1",
     "moment": "^2.29.2",
     "react": "^18.0.0",
+    "react-animated-cursor": "^2.4.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.29.0",
     "react-loader-spinner": "^6.0.0-0",
