--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "moment": "^2.29.2",
+    "notistack": "^2.0.4",
     "react": "^18.0.0",
     "react-animated-cursor": "^2.4.0",
     "react-dom": "^18.0.0",
+    "react-dropdown": "^1.9.2",
     "react-hook-form": "^7.29.0",
     "react-loader-spinner": "^6.0.0-0",
     "react-moment": "^1.1.2",
@@ -26,7 +28,8 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.11",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
