--- a/client/package.json
+++ b/client/package.json
@@ -6,18 +6,21 @@
   "dependencies": {
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "cogo-toast": "^4.2.3",
     "moment": "^2.29.2",
     "notistack": "^2.0.4",
     "react": "^18.0.0",
     "react-animated-cursor": "^2.4.0",
     "react-dom": "^18.0.0",
     "react-dropdown": "^1.9.2",
+    "react-easy-crop": "^4.1.4",
     "react-hook-form": "^7.29.0",
     "react-loader-spinner": "^6.0.0-0",
     "react-moment": "^1.1.2",
