category functionality added

--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "cogo-toast": "^4.2.3",
-    "moment": "^2.29.2",
+    "moment": "^2.29.3",
     "notistack": "^2.0.4",
     "react": "^18.0.0",
     "react-animated-cursor": "^2.4.0",
@@ -27,6 +27,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
