--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-dropdown": "^1.9.2",
     "react-easy-crop": "^4.1.4",
     "react-hook-form": "^7.29.0",
+    "react-jwt": "^1.1.6",
     "react-loader-spinner": "^6.0.0-0",
     "react-moment": "^1.1.2",
     "react-redux": "^7.2.8",
