--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "^2.8.8",
     "@mui/icons-material": "^5.5.1",
+    "@mui/lab": "^5.0.0-alpha.84",
     "@mui/material": "^5.5.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -28,6 +29,7 @@
     "react-redux": "^7.2.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
+    "react-swipeable-views": "^0.14.0",
     "react-table": "^7.7.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
