--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.6",
     "multer": "^1.4.4",
+    "stripe": "^9.10.0",
     "validator": "^13.7.0"
   },
   "devDependencies": {
