--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^1.9.0",
     "@stripe/stripe-js": "^1.32.0",
+    "@tanstack/react-table": "^8.9.3",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
@@ -32,7 +33,6 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "react-swipeable-views": "^0.14.0",
-    "react-table": "^7.7.0",
     "sass": "^1.49.11",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
