--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "express-async-handler": "^1.2.0",
     "express-fileupload": "^1.3.1",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.31",
     "mongoose": "^6.2.6",
     "multer": "^1.4.4",
+    "react-csv": "^2.2.2",
     "stripe": "^9.10.0",
     "validator": "^13.7.0"
   },
