--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
     "express-fileupload": "^1.3.1",
+    "generate-unique-id": "^2.0.3",
     "jsonwebtoken": "^8.5.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.31",
