--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "cogo-toast": "^4.2.3",
+    "html2pdf.js": "0.9.0",
     "moment": "^2.29.3",
     "notistack": "^2.0.4",
     "react": "^18.0.0",
