--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,9 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "cogo-toast": "^4.2.3",
+    "filepond": "^4.30.4",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
     "html2pdf.js": "0.9.0",
     "moment": "^2.29.3",
     "notistack": "^2.0.4",
@@ -27,6 +30,7 @@
     "react-dom": "^18.0.0",
     "react-dropdown": "^1.9.2",
     "react-easy-crop": "^4.1.4",
+    "react-filepond": "^7.1.2",
     "react-hook-form": "^7.29.0",
     "react-jwt": "^1.1.6",
     "react-loader-spinner": "^6.0.0-0",
