--- a/client/package.json
+++ b/client/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "5.0.0",
     "react-swipeable-views": "^0.14.0",
     "sass": "^1.49.11",
+    "swiper": "^10.2.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
