--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react": "^18.0.0",
     "react-animated-cursor": "^2.4.0",
     "react-cropper": "^2.3.3",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.0.0",
     "react-dropdown": "^1.9.2",
     "react-easy-crop": "^4.1.4",
